// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should add a \`className\` if \`type\` is \`confirm\` 1`] = `
<div>
  <div>
    <span>
      <div
        class="cf-modal__backdrop-scroller"
      >
        <div
          class="cf-modal__backdrop-outer"
        >
          <div
            class="cf-modal__backdrop"
          >
            <div
              class="cf-modal cf-modal--confirm"
              tabindex="-1"
            />
          </div>
        </div>
      </div>
    </span>
  </div>
</div>
`;

exports[`should add a \`className\` if \`width\` is defined 1`] = `
<div>
  <div>
    <span>
      <div
        class="cf-modal__backdrop-scroller"
      >
        <div
          class="cf-modal__backdrop-outer"
        >
          <div
            class="cf-modal__backdrop"
          >
            <div
              class="cf-modal cf-modal--wide"
              tabindex="-1"
            />
          </div>
        </div>
      </div>
    </span>
  </div>
</div>
`;

exports[`should hide the modal when \`isOpen\` is \`false\` 1`] = `
<div>
  <div>
    <span />
  </div>
</div>
`;

exports[`should render the modal when \`isOpen\` is \`true\` 1`] = `
<GatewayProvider>
  <div>
    <Modal
      closeOnBackdropClick={true}
      closeOnEsc={true}
      isOpen={true}
      onRequestClose={[Function]}
    />
    <GatewayDest
      name="modal"
    />
  </div>
</GatewayProvider>
`;
